--- a/less/forms.less
+++ b/less/forms.less
@@ -26,8 +26,8 @@ form fieldset {
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	min-width: 0; // stop auto resize on Chrome
-	display:table-column; // stop auto resize on Firefox
-	display: block\9; // undo the above on IE
+/*	display:table-column; // stop auto resize on Firefox
+	display: block\9; // undo the above on IE */
 }
 
 form legend {
